--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -28,5 +28,17 @@ a:active{color: #9acfea;}
     transform: translate(50%, 50%);
 }
 
+.panel-body.tableau{
+    padding:0;
+    font-weight: lighter;
+}
+
+.panel-body > .table{margin-bottom:0px;}
+
+.light-primary{
+    background-color: #B0C4DE;
+}
+
+
 
 /*---------------------------------------------------------------------*/
